# rust_fullstack

apps/backend/: Cargo.toml
apps/frontend/docs/: Cargo.toml  index.html
docker/api/: Dockerfile
docker/db/: Dockerfile
