[package]
name = "apps_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apps_shared = { path = "../shared" }
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
jsonwebtoken = "8.3.0"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
actix-cors = "0.7.0"
sqlx = { version="0.7.4", features = [ "runtime-tokio-rustls", "mysql" ]}
tokio = { version = "1.36.0", features = ["full"] }
envy = "0.4.2"

[dev-dependencies]
actix-rt = "2.9.0"
